--- a/HTML/index.css
+++ b/HTML/index.css
@@ -6,16 +6,73 @@
 body {
     margin: 0;
     overflow-x: hidden;
-    background-color: rgb(13, 11, 31)
+    background-color: rgb(13, 11, 31);
+    color: #F7F7F7;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
+}
+
+.title {
+    position: relative;
+    right: 15vw;
+    margin-top: 15vh;
 }
 
 h1 {
     font-family: "Montserrat";
-    font-size: 60px;
+    font-size: 70px;
     color: #F7F7F7;
     text-align: center;
     text-shadow: 5px 5px 10px black;
-    position: relative;
-    right: 15vw;
-    margin-top: 25vh;
+}
+
+.title p {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
+    font-size: 20px;
+    text-align: center;
+}
+
+.red-line {
+    height: 4px;
+    width: 200px;
+    background-color:#9E1130;
+    margin-left: 40vw;
+    margin-top: 15px;
+    margin-bottom: 20px;
+}
+
+h2 {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
+}
+
+.carrosel {
+    margin-top: 200px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1100px;
+}
+
+.jogue-agora {
+    margin-left: auto;
+    margin-right: auto;
+    width: 80vw;
+    margin-top: 100px;
+    text-align: center;
+}
+
+.buttons {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+    width: 80vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.buttons button {
+    padding: 20px;
+    width: 200px;
 }
