--- a/HTML/sobre.css
+++ b/HTML/sobre.css
@@ -8,7 +8,6 @@ body{
     min-width: 150px;
 }
 
-
 .sobre-container{
     display: flex;
     height: 100px;
@@ -91,12 +90,11 @@ body{
     padding-bottom: 100px;
     font-weight: 700;
     font-size: 52px;
-
 }
 
 #btn-jogar{
     margin-top: 70px;
-    width: 45%;
+    width: 100%;
     height: 50px;
     background-color: #7D0B23;
     border: none;
@@ -111,4 +109,11 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+footer{
+    text-align: center;
+    font-family: 'Open Sans', sans-serif;
+    margin-bottom: 35px;
+    color: white;
 }
